warmup1: edit Rmd and md file

--- a/warmup1/Warm_Up_1.Rmd
+++ b/warmup1/Warm_Up_1.Rmd
@@ -2,7 +2,7 @@
 title: "warmup01-Uzziel-Valencia.Rmd"
 author: "Uzziel Valencia"
 date: "2/4/2019"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
