Inserting all required visualizations

--- a/workout01/report/NBA-Report.Rmd
+++ b/workout01/report/NBA-Report.Rmd
@@ -1,26 +1,49 @@
 ---
-title: "NBA-Report"
+title: "Warriors, Your Adoration is Earned"
 author: "Uzziel Valencia"
 date: "3/13/2019"
 output: github_document
 ---
+### An indepth look at the perfomance of San Fransisco's beloved Warriors
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+Our city has always rallied behind our Warriors; we wear their names on our backs, invite them into our homes via the tv, read about them on our phones, and talk about them to our friends. The Warriors symbol can be found all throughout the Bay Area, a proud flag shining bright under our golden Californian sun.  
 
-```{r echo = FALSE}
-library(readr)
+But why do we love our Warriors so much? Do they remind us of home? Of our family? Of ourselves? Is our love for the Warriors modern day triablism at it's finest, or is it something more? Is it something defendable, perhaps, quantifiable even? In short, **yes!**  
 
-# This allows you to ge the tables where ever you want them.
-shots_data <- read_csv('../data/shots-data.csv')
-shots_data
-```
 
-# 5.1) Effective Shooting Percentage
+### Two Pointers? Served All Day Baby 
 
-two_ptr = two_ptr %>%
-  group_by(name) %>%
-  summarise(made = sum(shot_made_flag == 'shot_yes'))
+| Player | Successes | Attempts | Success Rate |
+| :---: | :---: | :---: | :---: |
+| Andre Iguodala | 134 | 210 | 64% |
+| Kevin Durant | 390 | 643 | 61% |
+| Stephen Curry | 304 | 563 | 53% |
+| Klay Thompson | 329 | 640 | 51% |
+| Draymond Green | 171 | 346 | 49% |
+
+### Threes? Yeah, We Got em' Too
+
+| Player | Successes | Attempts | Success Rate |
+| :---: | :---: | :---: | :---: |
+| Klay Thompson | 246 | 580 | 42% |
+| Stephen Curry | 280 | 687 | 41% |
+| Kevin Durant | 105 | 272 | 39% |
+| Andre Iguodala | 58 | 161 | 36% |
+| Draymond Green | 74 | 232 | 32% |
+
+### Overall? We Ballin'
+
+| Player | Successes | Attempts | Success Rate |
+| :---: | :---: | :---: | :---: |
+| Kevin Durant | 495 | 915 | 54% |
+| Andre Iguodala | 192 | 371 | 52% |
+| Klay Thompson | 575 | 1220 | 47% |
+| Stephen Curry | 584 | 1250 | 47% |
+| Draymond Green | 245 | 578 | 42% |
+
   
-getwd()
+#### When it comes to shooting, we've got our bases covered
+```{r out.width = '80%', echo = FALSE, fig.align = 'center'}
+knitr::include_graphics('../images/gsw-shot-charts.png')
+```
+
