NBA-Report: add extensive changes and links

--- a/workout01/report/NBA-Report.Rmd
+++ b/workout01/report/NBA-Report.Rmd
@@ -10,6 +10,41 @@ Our city has always rallied behind our Warriors; we wear their names on our back
 
 But why do we love our Warriors so much? Do they remind us of home? Of our family? Of ourselves? Is our love for the Warriors modern day triablism at it's finest, or is it something more? Is it something defendable, perhaps, quantifiable even? In short, **yes!**  
 
+The motivation of this article is to show the readers *why* the Bay's love for the Warriors is warranted. To do this, let's first take a stroll down memory lane to see what makes the Warriors so unique.   
+
+#### History
+According to the Warriors' own records [[1]](https://www.nba.com/warriors/team_history_index.html), they are one of only 3 original charter teams left in the modern NBA. They share legacies as long and as storied as those of the Knicks and the Celtics. And you know what else? When all the basketball teams in America decided, "Hey, let's get together and compete to see who's best!" the Warriors, well, they showed up and just won the whole dang thing [[2]](https://www.nba.com/warriors/team_history_index.html). With this win in the 1946-47 season, the Warriors secured their place in history. As if that wasn't enough, the Warriors claim 18 Hall-of-Famers- while 4 have gone on to coach the team [[3]](https://basketball.fandom.com/wiki/Golden_State_Warriors).  
+
+### Getting Nerdy
+Ok, so the Warriors are good, but how good?.  
+Welp, if we trust the people over at [Basketball.Fandom.Com](https://basketball.fandom.com/wiki/Basketball_Wiki), they're ridiculously good.  
+
+According to the sources at Basketball Wiki, the Warriors hold the NBA record for best season and post-season [[4]](https://basketball.fandom.com/wiki/Golden_State_Warriors)! But what does that look like in numbers?  
+
+Well, they earned the record for best season with a blistering 73-9 tally. Next, they earned the post-season record with an *astounding* 16-1 tab. Let's do some analysis to see what this means in percentages.  
+
+```{r}
+season_games <- 82
+warrior_wins <- 73
+season_percent_wins <- warrior_wins/season_games
+season_percent_wins
+```
+Wow! In their best season, the Warriors won almost 90% of the games they played in; pretty amazing!
+But, how about for the post-season?
+
+```{r}
+post_season_games <- 17
+warrior_post_wins <- 16
+post_percent_wins <- warrior_post_wins/post_season_games
+post_percent_wins
+```
+
+A 94% success rate; **remarkable!**  
+
+
+Any way you'd like to slice it, the Warriors play a good game. But, we can still ask, *why* is it that they're so successful? Well, to investigate this, we could anaylze their defensive strategies, but defense only helps to *not* lose games. If you want your team to win, it's all about putting points on the board.
+
+***
 
 ### Two Pointers? Served All Day Baby 
 
