--- a/binomial/vignettes/Introduction.Rmd
+++ b/binomial/vignettes/Introduction.Rmd
@@ -12,6 +12,7 @@ vignette: >
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(collapse = TRUE,comment = "#>")
 library(binomial)
+
 #shift+command+B
 ```
 
@@ -33,28 +34,36 @@ The operations in this package include the following:
 #### Summary Operations
 There are other functions that give measures of your binomial distribution. Ther are as follows:
 
-* **bin_mean( )**: Gives the expected mean of a distribution that you specify
-* **bin_varience( )**: Gives the variance of a distribution that you specify
-* **bin_mode( )**: Gives the mode of a distribution that you specify
-* **bin_skewness( )**: Gives the skewness of a distribution that you specify
-* **bin_kurtosis( )**: Gives the kurtosis (taildness) of a distribution that you specify
+* **bin_mean( )** : Gives the expected mean of a distribution that you specify
+* **bin_varience( )** : Gives the variance of a distribution that you specify
+* **bin_mode( )** : Gives the mode of a distribution that you specify
+* **bin_skewness( )** : Gives the skewness of a distribution that you specify
+* **bin_kurtosis( )** : Gives the kurtosis (taildness) of a distribution that you specify
 
 \n
 
 
 ### Examples
 
-Let's look at how we might utilize Binomial; first we're gonna compute a binomial probability using **bin_probability( )**.
+Let's look at the first aspect of the binomial function, *selection*. In order to run our 'n' *choose* 'k' operation, we simply utilize **bin_choose( )** and specifiy an 'n' and a 'k'.
+
+```{r}
+bin_choose( n = 5, k = 2)
+```
+
+Neat! Now we've done the first step to computing a binomial distribution.
+
+Let's look at the second step, calling **bin_probability( )**; simply call **bin_probability( )** and fill it with your parameters.
 
 ```{r}
 bin_probability(k = 2, n = 5, p = 0.5)
 ```
 
 
-Wow! Look at the result! The function **bin_probability** returns the probability of getting *k* successes in *n* number of trials with the *p* probability of success.
+Wow! Look at the result! The function **bin_probability( )** returns the probability of getting *k* successes in *n* number of trials with the *p* probability of success.
 \n
 
-Now let's see if we can get these visualized. Let's use the function **bin_distribution** to get a bar graph of frequencies and their successes.
+Now in order to get results vizualized, let's use the function **bin_distribution( )** to get a data.frame of our frequencies and their successes.
 
 ```{r}
 bin1 <- bin_distribution(n = 5, p = 0.5)
@@ -70,56 +79,72 @@ plot(bin1)
 
 Nice! How cool is that!? Of course, you can get fancier with the plots on your own time.
 
+
 \n
 
-### Summation Examples
+Now, what if we want a data.frame with the cumulative probabilities of our distribution? Easy, let's use the function **bin_cumulative ( )** which takes 'n' and 'p'. 
 
-Now, let's say you want to get some summation information about your distributions.
-
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
-
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
-
-## Vignette Info
-
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
-
-## Styles
-
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+```{r}
+#bin_cumulative( n = 5, p = 0.5)
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
+Look at that! A data.frame with the cumulative probabilities.
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
+\n
 
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
+To get back to basics, and just look at the main parameters we're working with, use **bin_variable( )** and get this information in a neat list.
 
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+```{r}
+bin_variable(n = 5, p = 0.5)
 ```
 
-Also a quote using `>`:
+Now, let's say you want to get some summary information about your distributions. There is a convenient way to get all this information in one place:
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+* First call **bin_variable( )** using your trials and probability
+* Second call **summary** on your **bin_variable( )** and assign that to a new variable (i.e. 'binsum')
+* Third call your new variable
+
+```{r}
+bin1 <- bin_variable( n = 10, p = 0.3)
+binsum <- summary(bin1)
+binsum
+```
+
+And now you have all the summary statistics about your distribiution in one specified place!
+
+\n
+
+### Measures
+
+The package Binomial has a number of different tools to get the measures of our binomial probabilities.
+\n
+
+To get the mean of our distribution, call **bin_mean( )**.
+
+```{r}
+bin_mean( n = 10, p = 0.3)
+```
+
+To get the variance of our distribution, call **bin_variance( )**.
+
+```{r}
+bin_variance(n = 10, p = 0.3)
+```
+
+To get the mode of our distribution, call **bin_mode( )**.
+
+```{r}
+bin_mode( n = 10, p = 0.3)
+```
+
+To get the skewness of our distribution, call **bin_skewness( )**.
+
+```{r}
+bin_skewness( n = 10, p = 0.3)
+```
+
+To get the kurtosis (tailed-ness) of our distribution, call **bin_kurtosis( )**.
+
+```{r}
+bin_kurtosis( n = 10, p = 0.3)
+```
