--- a/binomial/README.Rmd
+++ b/binomial/README.Rmd
@@ -4,4 +4,12 @@
       html_preview: false
 ---
 
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "README-"
+)
+```
+
 ## Trying
