--- a/binomial/README.Rmd
+++ b/binomial/README.Rmd
@@ -9,22 +9,88 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+## Brief Introduction
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+\n
 
-```{r cars}
-summary(cars)
+### Welcome the Binomial Package!
+
+This is a minor package that will help you to do all matter of computation with *binomial probabilities*.
+
+
+The main functions in this package are the following:
+
+* **bin_choose( )**: Giving the number of successes in a given number of trials
+* **bin_probability( )**: Computing the binomial probability under specified conditions
+* **bin_distribution( )**: Gives a dataframe with the listed successes and their probabilities
+* **bin_cumulative( )**: Gives a dataframe with the listed successes, thier probabilities, and a cumulative count of probabilities
+* **bin_variable( )**: Returns a list of all the relevant variables of a binomial distribution
+
+### How to Install
+
+In order to install the package, you will need to use the **devtools** package.
+
+```r
+install.packages("devtools") 
 ```
 
-## Including Plots
+Then you can install this package from github:
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```r
+devtools::install_github("stat133-sp19/hw-stat133-UzzielV/tree/master/binomial")
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+If you want to see the fancy-shmancy vignette I built too, you can run the following code:
+
+```r
+devtools::install_github("stat133-sp19/hw-stat133-UzzielV/tree/master/binomial", build_vignettes = TRUE)
+```
+
+### Now, let's use it!
+
+Running **bin_choose( )**:
+
+```{r}
+library(binomial)
+bin_choose( n = 5, k = 2)
+```
+
+Running **bin_probability( )**:
+
+```{r}
+bin_probability(k = 2, n = 5, p = 0.5)
+```
+
+Getting a distribution in a data.frame **bin_probability( )**:
+
+```{r}
+bin1 <- bin_distribution(n = 5, p = 0.5)
+bin1
+```
+
+Plotting that distribution **plot( )**:
+
+```{r}
+plot(bin1)
+```
+
+Getting cumulative frequencies **bin_cumulative( )**:
+
+```{r}
+bin_cumulative( n = 5, p = 0.5)
+```
+
+Inspecting our variables  **bin_variable( )**:
+
+```{r}
+bin_variable(n = 5, p = 0.5)
+```
+
+Summarizing the parameters of our binomial variables:
+
+```{r}
+bin1 <- bin_variable( n = 10, p = 0.3)
+binsum <- summary(bin1)
+binsum
+```
